# ublue-update

./: .gitignore  CHANGELOG.md  Containerfile  Containerfile.builder  Containerfile.test  Makefile  README.md  auto-update  auto-update.py  auto-update.service  auto-update.timer  cosign.pub  justfile  pyproject.toml  rpkg.macros  setup.cfg  ublue-update  ublue-update.spec  ublue-update.spec.rpkg  ublue-updater.service  ublue-updater.spec  ublue-updater.timer  update-daemon.py  update-ublue
.github/workflows/: build-release.yml  build-test.yml  build.yml  release-please.yml  unit.yml
files/etc/ublue-update.d/: 05-distrobox-user-update.sh  06-fleek-user-update.sh
files/etc/ublue-update.d/system/: 00-system-update.py  00-system-update.sh  02-flatpak-system-repair-cleanup.sh
files/etc/ublue-update.d/user/: 00-flatpak-user-update.sh  01-flatpak-user-repair-cleanup.sh  02-distrobox-user-update.sh  03-fleek-user-update.sh  20-brew-update.sh
files/etc/update.d/: 03-distrobox-user-update.sh  flatpak-system-update.sh  system-update.sh
files/usr/etc/ublue-update/: ublue-update.conf  ublue-update.toml
src/ublue_update/: cli.py  config.py  filelock.py  notification_manager.py  session.py
src/ublue_update/update_checks/: sign.py  system.py  wait.py
src/ublue_update/update_drivers/: brew.py
src/ublue_update/update_inhibitors/: custom.py  hardware.py
src/ublue_updater/: cli.py
src/ublue_updater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/unit/: test_brew.py  test_cli.py  test_config.py  test_filelock.py  test_session.py
tests/unit/update_checks/: test_system.py  test_wait.py
tests/unit/update_inhibitors/: test_custom.py  test_hardware.py
update-scripts/: flatpak-system-update.sh  system-update.sh  test1.sh  test2.sh  test3.sh
(+16 files in other folders)
