[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ublue_updater"
authors = [
    {name = "gerblesh", email = "01901964+gerblesh@users.noreply.github.com"},
]
description = "Ublue System Updater"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ublue", "update"]
license = {text = "Apache-2"}
classifiers = [
]
dependencies = [
    "notify2",
    "psutil"
]
dynamic = ["version"]

[project.scripts]
ublue-update = "ublue_updater.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
