[metadata]
name = ublue_updater
version = attr: ublue_updater.VERSION
author = gerblesh
author_email = 101901964+gerblesh@users.noreply.github.com
description = Ublue Modular System Updater
long_description = file: README.md
keywords = ublue, updater
license = Apache-2.0

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =

#[options.entry_points]
#console_scripts =
#    ublue-update = ublue_updater.cli:main

[flake8]
max-line-length = 90
